test/parser/datatype/035.stderr
At: "035.hac":10:
parse error: syntax error
parser stacks:
state	value
#STATE#	(null) 
#STATE#	list<(root_item)>: (process-definition) ... [7:1..21]
#STATE#	(process-prototype) [9:1..44]
#STATE#	{ [9:46]
#STATE#	datatype: bool [10:2..5]
in state #STATE#, possible rules are:
	defdatatype : declare_datatype_proto '{' . optional_datatype_body set_body get_body '}'  (#RULE#)
	optional_datatype_body : .  (#RULE#)
acceptable tokens are: 
	'!' (shift)
	'(' (shift)
	'-' (shift)
	'[' (shift)
	'{' (shift)
	'~' (shift)
	ID (shift)
	FLOAT (shift)
	INT (shift)
	STRING (shift)
	SCOPE (shift)
	SPEC_LANG (shift)
	SET (reduce)
	BOOL_TRUE (shift)
	BOOL_FALSE (shift)
